generating a graph its working

--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "edcb5487-e2a4-4568-9598-8f7781b8b77f",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "015155f2-8d04-47b9-bf7e-a98213452a13",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c3864a1e-2ad9-475c-b9f2-f51b6cdb648e",
    "metadata": {},
    "outputs": [],
@@ -97,9 +97,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "with open ('sx-stackoverflow-a2q.txt') as dataset_a2q:\n",
     "    a2q = [int(x) for x in dataset_a2q.read().split()] #while reading lines, split and transform into int\n",
-    "    #len(lst)=3* real number of lines, because after this step each value is stored alone: no nested lists"
+    "    #len(lst)=3* real number of lines, because after this step each value is stored alone: no nested lists\n",
+    "'''"
    ]
   },
   {
@@ -109,9 +111,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "m=int(len(a2q)/3)\n",
     "for i in range(2,m+1,3):\n",
-    "    a2q[i]=dt.utcfromtimestamp(a2q[i]).strftime('%Y-%m-%d')"
+    "    a2q[i]=dt.utcfromtimestamp(a2q[i]).strftime('%Y-%m-%d')\n",
+    "    '''"
    ]
   },
   {
@@ -121,8 +125,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "with open ('sx-stackoverflow-c2a.txt') as dataset_c2a:\n",
-    "    c2a = [int(x) for x in dataset_c2a.read().split()]"
+    "    c2a = [int(x) for x in dataset_c2a.read().split()]\n",
+    "    '''"
    ]
   },
   {
@@ -132,9 +138,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "m=int(len(c2a)/3)\n",
     "for i in range(2,m+1,3):\n",
-    "    c2a[i]=dt.utcfromtimestamp(c2a[i]).strftime('%Y-%m-%d')"
+    "    c2a[i]=dt.utcfromtimestamp(c2a[i]).strftime('%Y-%m-%d')\n",
+    "'''"
    ]
   },
   {
@@ -144,8 +152,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "with open ('sx-stackoverflow-c2q.txt') as dataset_c2q:\n",
-    "    c2q = [int(x) for x in dataset_c2q.read().split()]"
+    "    c2q = [int(x) for x in dataset_c2q.read().split()]\n",
+    "'''"
    ]
   },
   {
@@ -155,9 +165,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "m=int(len(c2q)/3)\n",
     "for i in range(2,m+1,3):\n",
-    "    c2q[i]=dt.utcfromtimestamp(c2q[i]).strftime('%Y-%m-%d')"
+    "    c2q[i]=dt.utcfromtimestamp(c2q[i]).strftime('%Y-%m-%d')\n",
+    "    '''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e57bf5fb-60ac-4ca3-b589-b6b7aa2d3a60",
+   "metadata": {},
+   "source": [
+    "### Remove answer from user to his own question, i.e. remove loops from corresponding graph"
    ]
   },
   {
@@ -173,16 +193,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e57bf5fb-60ac-4ca3-b589-b6b7aa2d3a60",
-   "metadata": {},
-   "source": [
-    "### Remove answer from user to his own question, i.e. remove loops from corresponding graph"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "97f0f7d4-a147-490e-a80f-625550d3daf8",
    "metadata": {},
    "outputs": [],
@@ -206,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e48006d7-9c6e-4757-a458-0c69c8e76889",
    "metadata": {},
    "outputs": [],
@@ -222,7 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "165aa557",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(c2a_n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9fde7540-072c-4579-8af4-24d9739a9433",
    "metadata": {},
    "outputs": [],
@@ -254,38 +276,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "e25ee4cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dateInRange(date, initTime, endTime): #return true if the given date its in the range [initTime, endTime], return false otherwise\n",
+    "    if(initTime == '-' or endTime == '-'):\n",
+    "        return True\n",
+    "    if initTime <= date <= endTime:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "def createGraph(initTime, endTime, data):\n",
+    "    graph = {}\n",
+    "    for x in range(len(data)):\n",
+    "        if dateInRange(data[x][2], initTime, endTime):\n",
+    "            if data[x][0] in graph: #we already have the node of that user in the graph\n",
+    "                if data[x][1] in graph[data[x][0]]: #we already have one interaction of user data[x][0] with user data[x][1], so we add 1 to the number of interactions\n",
+    "                    graph[data[x][0]][data[x][1]] += 1\n",
+    "                else:\n",
+    "                    graph[data[x][0]][data[x][1]] = 1 #we don't have an interacion between that 2 users, so we initialize the interaction with a 1 (because till the moment we only have 1 interaction).\n",
+    "            else: #we don't have the node of the user in the graph\n",
+    "                graph[data[x][0]] = {data[x][1] : 1}\n",
+    "    return graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b35cee1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "auxData = [['0','1','2008-02-11'], ['0', '2', '2008-02-11'], ['0', '1', '2008-02-11'], ['1','0', '2008-04-11']]\n",
+    "dict_a2q_n = createGraph('2008-02-11', '2008-02-11', auxData)\n",
+    "dict_a2q_n\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6df7b108",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_a2q_n = createGraph('-', '-', a2q_n)\n",
+    "dict_c2a_n = createGraph('-', '-', c2a_n)\n",
+    "dict_c2q_n = createGraph('-', '-', c2q_n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3b1b83a1-76eb-46fd-8640-dc5f010e01a6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "dict_a2q_n={}\n",
     "for i in range (0,naq):\n",
-    "    dict_a2q_n[a2q_n[i][0]]={'a2vs_question':a2q_n[0][1],'time_a2q':a2q_n[0][2],'weight':0}"
+    "    dict_a2q_n[a2q_n[i][0]]={'a2vs_question':a2q_n[0][1],'time_a2q':a2q_n[0][2],'weight':0}\n",
+    "    '''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c2383626-83a7-48d2-b6e6-2196bd1baa3b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "dict_c2a_n={}\n",
     "for i in range (0,nca):\n",
-    "    dict_c2a_n[c2a_n[i][0]]={'c2vs_answer':c2a_n[0][1],'time_c2a':c2a_n[0][2],'weight':0}"
+    "    dict_c2a_n[c2a_n[i][0]]={'c2vs_answer':c2a_n[0][1],'time_c2a':c2a_n[0][2],'weight':0}\n",
+    "    '''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "ee5ac4e5-614f-4b9b-a890-8f045bd26946",
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "dict_c2q_n={}\n",
     "for i in range (0,ncq):\n",
-    "    dict_c2q_n[c2q_n[i][0]]={'c2vs_question':c2q_n[0][1],'time_c2q':c2q_n[0][2],'weight':0}"
+    "    dict_c2q_n[c2q_n[i][0]]={'c2vs_question':c2q_n[0][1],'time_c2q':c2q_n[0][2],'weight':0}\n",
+    "    '''"
    ]
   },
   {
@@ -298,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "6f97aa6b-df17-4b3e-b0dc-b9db546db35c",
    "metadata": {},
    "outputs": [],
@@ -315,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "974728f4-f04a-4486-a8f6-b0fef5c4a090",
    "metadata": {},
    "outputs": [],
@@ -328,7 +411,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
