function to merge 2 graphs and multiples graphs added

--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -382,10 +382,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "da3a90dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mergeTwoGraphs(g1, g2): #merge g1 and g2 into one graph. g1 and g2 must exist.\n",
+    "  #  print(\"-----------\")\n",
+    "  #  print(\"g1: \", g1)\n",
+    "  #  print(\"g2: \", g2)\n",
+    "  #  print(\"-----------\")\n",
+    "    for x in g2:\n",
+    "  #      print(\"x: \", x)\n",
+    "        if x in g1: #if in g1 we have the user x, we have to add all his interactions 1 by 1. If the interaction already exists, we just add 1 to the weight.\n",
+    "            for y in g2[x]:\n",
+    "  #              print(\"y: \", y)\n",
+    "                if y in g1[x]:\n",
+    "                    g1[x][y] += g2[x][y]\n",
+    "                else:\n",
+    "                    g1[x][y] = 1\n",
+    "        else: #if in g1 we don't have the user x, we add all his interactions\n",
+    "            g1[x] = g2[x]\n",
+    "    return g1\n",
+    "\n",
+    "def mergeGraphs(graphs): #merge the graphs into one graph. The parameter graphs it's and array of all the graphs to merge [g1, g2, ...]\n",
+    "    mergedGraph = {}\n",
+    "    if len(graphs) > 0:\n",
+    "        mergedGraph = graphs[0]\n",
+    "        for x in graphs[1:]:\n",
+    "            mergedGraph = mergeTwoGraphs(mergedGraph, x)\n",
+    "            \n",
+    "            \n",
+    "    return mergedGraph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f631bf3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_Graphs = mergeGraphs([dict_a2q_n,dict_c2a_n,dict_c2q_n])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6f97aa6b-df17-4b3e-b0dc-b9db546db35c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "dict_merged={}\n",
     "dict_merged.update(dict_a2q_n)\n",
     "for i in dict_c2a_n.keys():\n",
@@ -393,7 +440,8 @@
     "        dict_merged[i]={'c2vs_answer':c2a_n[0][1],'time_c2a':c2a_n[0][2],'weight':0}\n",
     "for j in dict_c2q_n.keys():\n",
     "    if j not in dict_merged.keys(): \n",
-    "        dict_merged[j]={'c2vs_question':c2q_n[0][1],'time_c2q':c2q_n[0][2],'weight':0}\n"
+    "        dict_merged[j]={'c2vs_question':c2q_n[0][1],'time_c2q':c2q_n[0][2],'weight':0}\n",
+    "'''"
    ]
   },
   {
@@ -403,9 +451,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "for key in dict_merged.keys():\n",
     "    if len(dict_merged[key])>3:\n",
-    "        print(i)"
+    "        print(i)\n",
+    "'''"
    ]
   }
  ],
