--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "edcb5487-e2a4-4568-9598-8f7781b8b77f",
    "metadata": {
     "id": "edcb5487-e2a4-4568-9598-8f7781b8b77f"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "015155f2-8d04-47b9-bf7e-a98213452a13",
    "metadata": {
     "id": "015155f2-8d04-47b9-bf7e-a98213452a13"
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c3864a1e-2ad9-475c-b9f2-f51b6cdb648e",
    "metadata": {
     "id": "c3864a1e-2ad9-475c-b9f2-f51b6cdb648e"
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7477426f",
    "metadata": {
     "id": "7477426f"
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "97f0f7d4-a147-490e-a80f-625550d3daf8",
    "metadata": {
     "id": "97f0f7d4-a147-490e-a80f-625550d3daf8"
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "e48006d7-9c6e-4757-a458-0c69c8e76889",
    "metadata": {
     "id": "e48006d7-9c6e-4757-a458-0c69c8e76889"
@@ -270,30 +270,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "165aa557",
    "metadata": {
     "id": "165aa557"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "87"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(c2a_n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "9fde7540-072c-4579-8af4-24d9739a9433",
    "metadata": {
     "id": "9fde7540-072c-4579-8af4-24d9739a9433"
@@ -331,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "e25ee4cc",
    "metadata": {
     "id": "e25ee4cc"
@@ -378,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "6df7b108",
    "metadata": {
     "id": "6df7b108"
@@ -392,23 +381,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "3b1b83a1-76eb-46fd-8640-dc5f010e01a6",
    "metadata": {
     "id": "3b1b83a1-76eb-46fd-8640-dc5f010e01a6"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\ndict_a2q_n={}\\nfor i in range (0,naq):\\n    dict_a2q_n[a2q_n[i][0]]={'a2vs_question':a2q_n[0][1],'time_a2q':a2q_n[0][2],'weight':0}\\n    \""
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "dict_a2q_n={}\n",
@@ -419,23 +397,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "c2383626-83a7-48d2-b6e6-2196bd1baa3b",
    "metadata": {
     "id": "c2383626-83a7-48d2-b6e6-2196bd1baa3b"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\ndict_c2a_n={}\\nfor i in range (0,nca):\\n    dict_c2a_n[c2a_n[i][0]]={'c2vs_answer':c2a_n[0][1],'time_c2a':c2a_n[0][2],'weight':0}\\n    \""
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "dict_c2a_n={}\n",
@@ -446,23 +413,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "ee5ac4e5-614f-4b9b-a890-8f045bd26946",
    "metadata": {
     "id": "ee5ac4e5-614f-4b9b-a890-8f045bd26946"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\ndict_c2q_n={}\\nfor i in range (0,ncq):\\n    dict_c2q_n[c2q_n[i][0]]={'c2vs_question':c2q_n[0][1],'time_c2q':c2q_n[0][2],'weight':0}\\n    \""
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "dict_c2q_n={}\n",
@@ -483,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "f0b870b6",
    "metadata": {},
    "outputs": [],
@@ -517,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "9cd8181a",
    "metadata": {},
    "outputs": [],
@@ -527,157 +483,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "ab982ef7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{9: {8: 1, 72: 1},\n",
-       " 13: {1: 1, 23: 2, 11: 1},\n",
-       " 17: {1: 2, 32: 1, 72: 1, 48: 1, 83: 1, 2064: 1},\n",
-       " 48: {2: 1, 91: 1},\n",
-       " 19: {9: 1},\n",
-       " 35: {33: 1, 58: 1, 71: 1},\n",
-       " 39: {33: 1, 40: 1, 8: 1, 91: 1},\n",
-       " 43: {22: 1},\n",
-       " 37: {40: 1},\n",
-       " 49: {13: 1, 109: 1, 91: 1},\n",
-       " 50: {37: 1, 2089740: 1, 91: 1},\n",
-       " 40: {37: 1, 59: 1, 146637: 2, 91: 1},\n",
-       " 55: {8: 1, 78: 1, 146637: 2, 91: 1, 106: 1},\n",
-       " 51: {32: 1},\n",
-       " 60: {2: 1, 72: 1},\n",
-       " 61: {58: 1, 39: 1},\n",
-       " 25: {61: 2},\n",
-       " 2089740: {61: 1},\n",
-       " 72: {9: 1, 48: 1, 58: 1},\n",
-       " 36: {39: 1},\n",
-       " 146270: {72: 1},\n",
-       " 34: {39: 1, 91: 1, 105: 1},\n",
-       " 58: {72: 1, 59: 1},\n",
-       " 26: {58: 1},\n",
-       " 59: {78: 1, 30: 1, 83: 1, 63: 1},\n",
-       " 71: {48: 1, 30: 1, 60: 1, 62: 1, 91: 1},\n",
-       " 42: {58: 1, 39: 1},\n",
-       " 86: {58: 1, 78: 1, 4406: 1},\n",
-       " 146637: {37: 1, 30: 1, 59: 1, 4246: 1},\n",
-       " 80: {87: 1, 83: 1},\n",
-       " 44: {87: 1},\n",
-       " 70: {30: 1},\n",
-       " 33: {39: 1},\n",
-       " 30: {91: 1},\n",
-       " 93: {58: 1},\n",
-       " 96: {91: 1},\n",
-       " 91: {1: 1, 62: 1, 109: 1, 71: 1},\n",
-       " 101: {105: 1},\n",
-       " 106: {96: 1},\n",
-       " 1: {91: 1},\n",
-       " 3: {91: 1},\n",
-       " 380: {350: 1},\n",
-       " 4642: {2257: 1, 1324220: 1, 4893: 1},\n",
-       " 2495: {4285: 1},\n",
-       " 2515: {4903: 1, 4893: 1, 1600: 1},\n",
-       " 292: {1694: 1},\n",
-       " 4213: {1694: 1, 2789: 1, 3153: 1, 2653: 1, 4946: 1},\n",
-       " 2353001: {825: 1},\n",
-       " 4064: {3666: 1, 828: 1},\n",
-       " 4906: {3205: 1, 4903: 1, 3631: 1},\n",
-       " 3394: {1569: 1, 905: 2},\n",
-       " 811: {4771: 1},\n",
-       " 1597: {3153: 1},\n",
-       " 2915: {3153: 1, 4220: 1},\n",
-       " 1615: {2025: 1},\n",
-       " 4285: {1254: 2, 4729: 1, 3900: 1},\n",
-       " 422: {268: 1},\n",
-       " 4761: {2230: 1},\n",
-       " 445087: {3333: 1, 4673: 1, 4798: 2, 2915: 1},\n",
-       " 797: {4926: 1},\n",
-       " 4926: {1310: 1},\n",
-       " 1891: {3655: 1},\n",
-       " 1573: {1965: 1},\n",
-       " 209: {380: 1, 748: 1, 960: 1},\n",
-       " 2260: {4727: 2},\n",
-       " 4134: {813: 1},\n",
-       " 4833: {5021: 1},\n",
-       " 3408: {305: 1, 3421: 1, 2566: 1},\n",
-       " 1965: {2257: 1, 5208: 1},\n",
-       " 1820: {4052: 1},\n",
-       " 4918: {1965: 1, 115: 1},\n",
-       " 5021: {4833: 1, 17: 1},\n",
-       " 4596: {4300: 1, 4673: 1},\n",
-       " 4729: {3434: 1, 580: 1, 1659: 1},\n",
-       " 1944: {5049: 1, 1600: 1},\n",
-       " 2655: {4500: 1, 1196: 1, 234: 1},\n",
-       " 3055: {2257: 1},\n",
-       " 3434: {2284: 1},\n",
-       " 1084: {2284: 1},\n",
-       " 1968: {3827: 1},\n",
-       " 2653: {3171: 1, 4960: 1, 4906: 1},\n",
-       " 227: {2305: 1},\n",
-       " 1996: {4337: 1},\n",
-       " 5076: {1600: 1, 2847: 1},\n",
-       " 3848: {1569: 1},\n",
-       " 4489: {5038: 1, 1360: 1, 4764: 1},\n",
-       " 909: {5066: 1},\n",
-       " 2030: {198: 1},\n",
-       " 1879: {1690: 1},\n",
-       " 2443: {4997: 1},\n",
-       " 369: {233: 1},\n",
-       " 364: {5123: 1},\n",
-       " 1694: {1659: 1},\n",
-       " 242: {184: 1},\n",
-       " 2658: {1874: 1},\n",
-       " 4035: {1874: 1},\n",
-       " 2257: {4489: 1, 2757: 1, 5380: 1, 5197: 1},\n",
-       " 828: {2783: 1},\n",
-       " 1412: {5113: 2, 3742: 1},\n",
-       " 3446: {5113: 2},\n",
-       " 1790: {5119: 1, 115: 1, 672: 1, 5473: 1},\n",
-       " 1772: {4903: 1, 123: 2},\n",
-       " 952: {3196: 1},\n",
-       " 372: {1127460: 1, 834: 1, 5302: 1},\n",
-       " 184: {123: 1},\n",
-       " 1709: {5222: 1},\n",
-       " 1219: {5278: 1},\n",
-       " 4984: {5278: 1},\n",
-       " 327: {2191: 1},\n",
-       " 832: {5278: 1},\n",
-       " 245: {1117: 1},\n",
-       " 2975: {131: 1},\n",
-       " 960: {2759376: 1},\n",
-       " 1553: {342: 1},\n",
-       " 4200: {5023: 1},\n",
-       " 123: {445087: 1},\n",
-       " 986: {1175: 1},\n",
-       " 379: {1175: 2},\n",
-       " 2287: {1175: 1},\n",
-       " 1146: {445087: 1},\n",
-       " 3655: {4880: 1},\n",
-       " 1886: {123: 1},\n",
-       " 3474: {123: 1},\n",
-       " 2541: {115: 2},\n",
-       " 2535: {5369: 1},\n",
-       " 1220: {122: 1},\n",
-       " 1277510: {3279: 1},\n",
-       " 1310: {1666: 1, 279: 1},\n",
-       " 1438: {2001: 1},\n",
-       " 1196: {5302: 2},\n",
-       " 2574: {3146: 1},\n",
-       " 4013: {4491: 1},\n",
-       " 5330: {3900: 1},\n",
-       " 1384652: {4880: 1},\n",
-       " 2208: {445087: 1},\n",
-       " 1908: {1228: 1, 5330: 1},\n",
-       " 2469: {1874: 1}}"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "merged_Graphs"
    ]
@@ -814,8 +623,8 @@
     "        return self.results\n",
     "\n",
     "    # Second functionality\n",
-    "    def best_users(self, user_id, init_time, end_time, mtrc):\n",
-    "        return pass\n",
+    "    #def best_users(self, user_id, init_time, end_time, mtrc):\n",
+    "    #    return pass\n",
     "\n",
     "\n",
     "\n",
@@ -830,6 +639,201 @@
     "# report = graph_features.get_features(my_dict)\n",
     "# print(report)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ef590c5-0a5b-4593-92a5-cf0cd4a8f983",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_dict = {'A': {'B':{'weight': 2}, 'C':{'weight': 3}}, 'B': {'A':{'weight': 4}, 'C':{'weight': 5}, 'D':{'weight': 10}}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e5093da-d50b-4756-81b4-efe4803ad1ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r=nx.Graph(my_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee2b52e8-ac49-4073-9593-93c8973b44c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.nodes()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fac452b7-fc31-4d0e-b021-0d02e86ad7e5",
+   "metadata": {},
+   "source": [
+    "# FUNCTIONALITY 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b654b193-91f7-4049-a8f6-2ff9f6eed7c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dijkstra(g,start,end):\n",
+    "    s=start\n",
+    "    route=[]\n",
+    "    #remaining_seq= [x for x in seq if (x not in route)]\n",
+    "    dist={}\n",
+    "    finalized={}\n",
+    "    for i in g.nodes(): #initialize visited as false for all nodes\n",
+    "        dist[i]= np.inf\n",
+    "        finalized[i]=False\n",
+    "    dist[s]=0\n",
+    "    finalized[s]=True\n",
+    "    route.append(s)\n",
+    "    #remaining_seq.remove(s)\n",
+    "    while s != end:\n",
+    "        adj=[]\n",
+    "        for u in g.adj[s] : #for every neighbor of s\n",
+    "            if finalized[u]==False: #if it's not finalized\n",
+    "                adj.append(u) #add to adjacent nodes which aren't finalized, then update distance\n",
+    "                x=dist[s]+int(g.get_edge_data(s,u)['weight'])\n",
+    "                if dist[u]>x:\n",
+    "                    dist[u]=x\n",
+    "        for k in adj:\n",
+    "            if k==end: # if the end node is adjacent\n",
+    "                route.append(k) #add end to route, then end\n",
+    "                return (route)\n",
+    "        if len(adj)==0: #if we reach a leaf\n",
+    "            route.remove(s) #remove it\n",
+    "            s=route[-1] #return to previous node\n",
+    "            route.remove(s) #remove duplicate of previous node\n",
+    "        else:\n",
+    "            m=[k for k, v in dist.items() if v ==min(dist[a] for a in adj)] #get node/nodes that has/have minimum distance\n",
+    "            m=[k for k in m if (finalized[k]==False and k in adj)] #remove the ones not adjacent or finalized\n",
+    "            s=m[-1] #take last one\n",
+    "        finalized[s]=True\n",
+    "        route.append(s)\n",
+    "        adj=[]\n",
+    "    return(route)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fb47dac-622b-4727-929b-9a5c01c3ad70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def shortest_ordered_route(initTime, endTime, seq, start,end): #take p_1 (or p_j) and p_n as input\n",
+    "    g=nx.Graph(createGraph(initTime, endTime, merged_Graphs))\n",
+    "    route=[]\n",
+    "    route.extend(dijkstra(g,start,seq[0]))\n",
+    "    for i in range(0,len(seq)-1):\n",
+    "        route.extend(dijkstra(g,seq[i],seq[i+1])[1:])\n",
+    "    route.extend(dijkstra(g,seq[-1],end)[1:])\n",
+    "    return(route)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31b86720-1349-481a-830a-5c2eb4ca4fcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shortest_ordered_route('-', '-', [23,72,50,40], 3,91)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "509de825-2952-4b74-abea-5312de2bbf4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q=nx.Graph(createGraph('2008-02-11', '2008-04-11', merged_Graphs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b0366bc-1a72-4c60-8b36-a61df826c64a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c29ddeac-a9ed-4083-abbe-3234ef98b749",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_Graphs[50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eef4a8d8-875d-4a58-af1d-eb0a37b4c43d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_Graphs[40]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa5289d1-b5db-48b5-9943-805caae59b1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_Graphs[91]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a6d3a3a-f216-4ba9-9dba-59401115d01d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def shortest_ordered_route(g, seq, start, end):\n",
+    "    route=[]\n",
+    "    route.extend(dijkstra(g,start,seq[0]))\n",
+    "    for i in range(0,len(seq)-1):\n",
+    "        route.extend(dijkstra(g,seq[i],seq[i+1])[1:])\n",
+    "    route.extend(dijkstra(g,seq[-1],end)[1:])\n",
+    "    return(route)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7b6b187-a7f9-40e1-8c04-f99c62f4c784",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shortest_ordered_route(r, [23,72,50,40], 3,91)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8359a80e-2315-4d13-8e7c-98b07c101f54",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -838,7 +842,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
