graph structure changed

--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -341,12 +341,22 @@
     "        if dateInRange(data[x][2], initTime, endTime):\n",
     "            if data[x][0] in graph: #we already have the node of that user in the graph\n",
     "                if data[x][1] in graph[data[x][0]]: #we already have one interaction of user data[x][0] with user data[x][1], so we add 1 to the number of interactions\n",
-    "                    graph[data[x][0]][data[x][1]] += 1\n",
+    "                    graph[data[x][0]][data[x][1]]['weight'] += 1\n",
     "                else:\n",
-    "                    graph[data[x][0]][data[x][1]] = 1 #we don't have an interacion between that 2 users, so we initialize the interaction with a 1 (because till the moment we only have 1 interaction).\n",
+    "                    graph[data[x][0]][data[x][1]] = {'weight': 1} #we don't have an interacion between that 2 users, so we initialize the interaction with a 1 (because till the moment we only have 1 interaction).\n",
     "            else: #we don't have the node of the user in the graph\n",
-    "                graph[data[x][0]] = {data[x][1] : 1}\n",
+    "                graph[data[x][0]] = {data[x][1] : {'weight': 1}}\n",
     "    return graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4eb0879c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a2q_n"
    ]
   },
   {
@@ -377,6 +387,16 @@
     "dict_a2q_n = createGraph('-', '-', a2q_n)\n",
     "dict_c2a_n = createGraph('-', '-', c2a_n)\n",
     "dict_c2q_n = createGraph('-', '-', c2q_n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3164d84a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_a2q_n"
    ]
   },
   {
@@ -455,9 +475,9 @@
     "            for y in g2[x]:\n",
     "                #print(\\\"y: \\\", y)\n",
     "                if y in g1[x]:\n",
-    "                    g1[x][y] += g2[x][y]\n",
+    "                    g1[x][y]['weight'] += g2[x][y]['weight']\n",
     "                else:\n",
-    "                    g1[x][y] = 1\n",
+    "                    g1[x][y] = {'weight': 1}\n",
     "        else: #if in g1 we don't have the user x, we add all his interactions\n",
     "            g1[x] = g2[x]\n",
     "    return g1\n",
@@ -842,7 +862,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
