--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "edcb5487-e2a4-4568-9598-8f7781b8b77f",
    "metadata": {
     "id": "edcb5487-e2a4-4568-9598-8f7781b8b77f"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "015155f2-8d04-47b9-bf7e-a98213452a13",
    "metadata": {
     "id": "015155f2-8d04-47b9-bf7e-a98213452a13"
@@ -67,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c3864a1e-2ad9-475c-b9f2-f51b6cdb648e",
    "metadata": {
     "id": "c3864a1e-2ad9-475c-b9f2-f51b6cdb648e"
    },
    "outputs": [],
    "source": [
-    "n=100 #we'll try first with n=100 rows from each one of the 3 datasets\n",
+    "n=10000 #we'll try first with n=100 rows from each one of the 3 datasets\n",
     "for i in range(0,n):\n",
     "    a2q[i]=a2q[i].split()\n",
     "    a2q[i][0]=int(a2q[i][0])\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7477426f",
    "metadata": {
     "id": "7477426f"
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "97f0f7d4-a147-490e-a80f-625550d3daf8",
    "metadata": {
     "id": "97f0f7d4-a147-490e-a80f-625550d3daf8"
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e48006d7-9c6e-4757-a458-0c69c8e76889",
    "metadata": {
     "id": "e48006d7-9c6e-4757-a458-0c69c8e76889"
@@ -270,19 +270,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "165aa557",
    "metadata": {
     "id": "165aa557"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8319"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(c2a_n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9fde7540-072c-4579-8af4-24d9739a9433",
    "metadata": {
     "id": "9fde7540-072c-4579-8af4-24d9739a9433"
@@ -320,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e25ee4cc",
    "metadata": {
     "id": "e25ee4cc"
@@ -351,12 +362,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "4eb0879c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a2q_n"
+    "#a2q_n"
    ]
   },
   {
@@ -377,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6df7b108",
    "metadata": {
     "id": "6df7b108"
@@ -391,12 +402,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "3164d84a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict_a2q_n"
+    "#dict_a2q_n"
    ]
   },
   {
@@ -459,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f0b870b6",
    "metadata": {},
    "outputs": [],
@@ -493,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "9cd8181a",
    "metadata": {},
    "outputs": [],
@@ -503,12 +514,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "ab982ef7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_Graphs"
+    "#merged_Graphs"
    ]
   },
   {
@@ -555,7 +566,7 @@
     "id": "HQvvnnPB9EVE"
    },
    "source": [
-    "####Functionalities are defined as methods within a class."
+    "#### Functionalities are defined as methods within a class."
    ]
   },
   {
@@ -700,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "b654b193-91f7-4049-a8f6-2ff9f6eed7c0",
    "metadata": {},
    "outputs": [],
@@ -711,7 +722,7 @@
     "    #remaining_seq= [x for x in seq if (x not in route)]\n",
     "    dist={}\n",
     "    finalized={}\n",
-    "    for i in g.nodes(): #initialize visited as false for all nodes\n",
+    "    for i in g.keys(): #initialize visited as false for all nodes\n",
     "        dist[i]= np.inf\n",
     "        finalized[i]=False\n",
     "    dist[s]=0\n",
@@ -720,12 +731,13 @@
     "    #remaining_seq.remove(s)\n",
     "    while s != end:\n",
     "        adj=[]\n",
-    "        for u in g.adj[s] : #for every neighbor of s\n",
-    "            if finalized[u]==False: #if it's not finalized\n",
-    "                adj.append(u) #add to adjacent nodes which aren't finalized, then update distance\n",
-    "                x=dist[s]+int(g.get_edge_data(s,u)['weight'])\n",
-    "                if dist[u]>x:\n",
-    "                    dist[u]=x\n",
+    "        for u in list(g[s].keys())  : #for every neighbor of s\n",
+    "            if u in g:\n",
+    "                if finalized[u]==False: #if it's not finalized\n",
+    "                    adj.append(u) #add to adjacent nodes which aren't finalized, then update distance\n",
+    "                    x=dist[s]+g[s][u]['weight']\n",
+    "                    if dist[u]>x:\n",
+    "                        dist[u]=x\n",
     "        for k in adj:\n",
     "            if k==end: # if the end node is adjacent\n",
     "                route.append(k) #add end to route, then end\n",
@@ -746,7 +758,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
+   "id": "fa5289d1-b5db-48b5-9943-805caae59b1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def in_same_component(x,y,g): # to check if nodes x and y are in the same connected component in graph g\n",
+    "    neighbors=[x]\n",
+    "    for i in neighbors:\n",
+    "        for u in list(merged_Graphs[i].keys()):\n",
+    "            if u not in neighbors:\n",
+    "                if u in g:\n",
+    "                    neighbors.append(u)\n",
+    "    if y in neighbors:\n",
+    "        return True\n",
+    "    return False\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "9fb47dac-622b-4727-929b-9a5c01c3ad70",
    "metadata": {},
    "outputs": [],
@@ -763,94 +795,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "31b86720-1349-481a-830a-5c2eb4ca4fcf",
+   "execution_count": 63,
+   "id": "d6080745-6c5b-46ac-9af9-323e2d94caa8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "shortest_ordered_route('-', '-', [23,72,50,40], 3,91)"
+    "def graph_fun3(a2q,c2a,c2q,initTime,endTime):\n",
+    "    a2q_fun3=[i for i in a2q if initTime <=dt.utcfromtimestamp(int(a2q[i][2])).strftime('%Y-%m-%d') <=endTime]\n",
+    "    c2a_fun3=[i for i in c2a if initTime <=dt.utcfromtimestamp(int(c2a[i][2])).strftime('%Y-%m-%d') <=endTime]\n",
+    "    c2q_fun3=[i for i in c2q if initTime <=dt.utcfromtimestamp(int(c2q[i][2])).strftime('%Y-%m-%d') <=endTime]\n",
+    "    g=mergeGraphs([a2q_fun3,c2a_fun3,c2q_fun3])\n",
+    "    return g"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "509de825-2952-4b74-abea-5312de2bbf4b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q=nx.Graph(createGraph('2008-02-11', '2008-04-11', merged_Graphs))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b0366bc-1a72-4c60-8b36-a61df826c64a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c29ddeac-a9ed-4083-abbe-3234ef98b749",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merged_Graphs[50]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eef4a8d8-875d-4a58-af1d-eb0a37b4c43d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merged_Graphs[40]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa5289d1-b5db-48b5-9943-805caae59b1d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merged_Graphs[91]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "9a6d3a3a-f216-4ba9-9dba-59401115d01d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def shortest_ordered_route(g, seq, start, end):\n",
-    "    route=[]\n",
-    "    route.extend(dijkstra(g,start,seq[0]))\n",
-    "    for i in range(0,len(seq)-1):\n",
-    "        route.extend(dijkstra(g,seq[i],seq[i+1])[1:])\n",
-    "    route.extend(dijkstra(g,seq[-1],end)[1:])\n",
-    "    return(route)"
+    "def shortest_ordered_route(initTime,endTime, seq, start, end):\n",
+    "    g=graph_fun3(a2q,c2a,c2q,initTime,endTime)\n",
+    "    if in_same_component(start,end,g)==True:\n",
+    "        route=[]\n",
+    "        route.extend(dijkstra(g,start,seq[0]))\n",
+    "        for i in range(0,len(seq)-1):\n",
+    "            route.extend(dijkstra(g,seq[i],seq[i+1])[1:])\n",
+    "        route.extend(dijkstra(g,seq[-1],end)[1:])\n",
+    "        return(route)\n",
+    "    return(print(\"Not possible\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "a7b6b187-a7f9-40e1-8c04-f99c62f4c784",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "shortest_ordered_route() missing 1 required positional argument: 'end'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-65-e76b540cbaac>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mshortest_ordered_route\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmerged_Graphs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m404\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1982\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: shortest_ordered_route() missing 1 required positional argument: 'end'"
+     ]
+    }
+   ],
    "source": [
-    "shortest_ordered_route(r, [23,72,50,40], 3,91)"
+    "shortest_ordered_route(, [404],9,1982)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "51cbfc66-7fa6-40ad-a217-293ad1ef6dbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1970-01-01 00-00-07'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt.utcfromtimestamp(int(c2q[len(c2q)-1][2])).strftime('%Y-%m-%d %H-%M-%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ae9dbcbf-785e-4829-93df-1260a52b87fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1970-01-01 00-00-05'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt.utcfromtimestamp(int(c2q[0][2])).strftime('%Y-%m-%d %H-%M-%S')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8359a80e-2315-4d13-8e7c-98b07c101f54",
+   "id": "181e1069-17f0-4edf-9011-747d2b132e9b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -862,7 +906,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
